# MySafeVideoStreamin

./: .gitignore  ChiTiet.md  Dockerfile  README.md
.github/workflows/: deploy.yml.disabled
backend/: .env.example  Cargo.toml
backend/src/: main.rs  r2.rs  tests.rs  utils.rs
backend/src/application/use_cases/: auth.rs  download.rs  mod.rs  thumbnail.rs  video.rs
backend/src/domain/: models.rs
backend/src/domain/ports/: auth_verifier.rs  download_repository.rs  mod.rs  video_repository.rs
backend/src/infrastructure/: config.rs  google_auth_verifier.rs  memory_download_repository.rs  mod.rs  r2_video_repository.rs
backend/src/presentation/web/: router.rs
backend/src/presentation/web/handlers/: auth.rs  download.rs  mod.rs  video.rs
backend/src/presentation/web/middleware/: auth.rs  security.rs
backend/src/tests/: auth_middleware_tests.rs  auth_use_case_tests.rs  download_use_case_tests.rs  security_middleware_tests.rs  utils_tests.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: authApi.ts  client.ts  videoApi.ts
frontend/src/components/: DownloadQueue.tsx  DragDropUpload.tsx  Header.tsx  Login.tsx  QuotaIndicator.tsx  VideoList.tsx  VideoPlayer.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/utils/: fileValidation.ts  formatters.ts
