[package]
name = "video-streaming-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tower = { version = "0.5.2", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.37.0" }
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
reqwest = { version = "0.12", features = ["json"] }
